--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "preinstall": "yarn config set ignore-engines true"
+    "dev": "nodemon index.js"
   },
   "author": "chirag",
   "license": "ISC",
